# tp-python-project-setup

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
tests/: test_app.py
